--- a/backend/package.json
+++ b/backend/package.json
@@ -14,10 +14,12 @@
   "description": "",
   "dependencies": {
     "@fastify/jwt": "^9.0.3",
+    "ajv": "^8.17.1",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
     "fastify": "^5.2.1",
     "fastify-plugin": "^5.0.1",
+    "fluent-json-schema": "^5.0.0",
     "jsonwebtoken": "^9.0.2",
     "nodemon": "^3.1.9",
     "sequelize": "^6.37.5",
