feat: Start frontend, Login and Register.

--- a/backend/package.json
+++ b/backend/package.json
@@ -13,8 +13,10 @@
   "license": "ISC",
   "description": "",
   "dependencies": {
+    "@fastify/cors": "^10.0.2",
     "@fastify/jwt": "^9.0.3",
     "ajv": "^8.17.1",
+    "backend": "file:",
     "bcrypt": "^5.1.1",
     "dotenv": "^16.4.7",
     "fastify": "^5.2.1",
